--- a/main.html
+++ b/main.html
@@ -7,6 +7,33 @@
 </head>
 
 <body>
+	<form method="post" action="#">
+        <label for="name">Name
+            <input type="text" id="name" placeholder="Name">
+        </label>
+
+        <label for="phone">Phone
+            <input type="text" id="phone" placeholder="Phone Number">
+        </label>
+
+        <label for="address">Address 
+            <input type="text" id="address" placeholder="Address">
+        </label>
+
+        <label for="checkbox">Have you ever lived with a Dog before?
+            <input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?">
+        </label>
+
+        <select id="multiSelect">Please select your preferred breeds
+            <option value="first">First</option>
+            <option value="second">Second</option>
+            <option value="third">Third</option>
+        </select>
+
+        <label for="submit">
+            <input type="submit" id="submit">
+        </label>
+    </form>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
