--- a/main.html
+++ b/main.html
@@ -31,7 +31,7 @@
         </select>
 
         <label for="submit">
-            <input type="submit" id="submit">
+            <input type="submit" id="submit" value="Submit">
         </label>
     </form>
 	<!-- the entire body must be written by student -->
